Added the IServiceLocator interface and HallmanacIoc container singleton accessor.

--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core/Hallmanac.ServiceLocator.Core.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core/Hallmanac.ServiceLocator.Core.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HallmanacIoc.cs" />
+    <Compile Include="IServiceLocator.cs" />
     <Compile Include="ServiceResolutionException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
