--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core.NuGet/Hallmanac.ServiceLocator.Core.NuGet.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core.NuGet/Hallmanac.ServiceLocator.Core.NuGet.csproj
@@ -60,8 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="content\" />
-    <Folder Include="lib\" />
     <Folder Include="src\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="lib\Hallmanac.ServiceLocator.Core.dll" />
+    <Content Include="lib\Hallmanac.ServiceLocator.Core.XML" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
