--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AEFD94CB-3D51-4C3B-B7C1-A2C10E77F7C7}</ProjectGuid>
+    <ProjectGuid>{5C7D2125-6024-42B4-9B9A-2FBE6E0E35B2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hallmanac.ServiceLocator.Core</RootNamespace>
-    <AssemblyName>Hallmanac.ServiceLocator.Core</AssemblyName>
+    <RootNamespace>Hallmanac.ServiceLocator.Ninject</RootNamespace>
+    <AssemblyName>Hallmanac.ServiceLocator.Ninject</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Hallmanac.ServiceLocator.Core.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,11 +28,14 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Hallmanac.ServiceLocator.Core.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.0.0\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -46,9 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HallmanacIoc.cs" />
-    <Compile Include="IServiceLocator.cs" />
-    <Compile Include="ServiceResolutionException.cs" />
+    <Compile Include="NinjectServiceLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
