--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Hallmanac.ServiceLocator.Ninject</RootNamespace>
     <AssemblyName>Hallmanac.ServiceLocator.Ninject</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
