--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity/Hallmanac.ServiceLocator.Unity.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity/Hallmanac.ServiceLocator.Unity.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Hallmanac.ServiceLocator.Unity</RootNamespace>
     <AssemblyName>Hallmanac.ServiceLocator.Unity</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
