--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
@@ -32,11 +32,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.0.1\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
+      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.2.0\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Conventions, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Extensions.Conventions.3.2.0.0\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
