--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+
+# nuget package generated backup files
+*.nupkg.bak
