--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core.NuGet/Hallmanac.ServiceLocator.Core.NuGet.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Core.NuGet/Hallmanac.ServiceLocator.Core.NuGet.csproj
@@ -54,6 +54,7 @@
     <None Include="NuGet.exe" />
     <None Include="NuGet.config" />
     <None Include="Package.nuspec" />
+    <None Include="README.md" />
     <None Include="tools\init.ps1" />
     <None Include="tools\install.ps1" />
     <None Include="tools\uninstall.ps1" />
