--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Ninject/Hallmanac.ServiceLocator.Ninject.csproj
@@ -29,10 +29,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Hallmanac.ServiceLocator.Ninject.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.2.0\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
+    <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.2.1\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
