Upgraded the Nuget package for the Unity project to 1.2.1

--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity/Hallmanac.ServiceLocator.Unity.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity/Hallmanac.ServiceLocator.Unity.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Hallmanac.ServiceLocator.Unity.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,10 +30,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Hallmanac.ServiceLocator.Unity.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.2.0\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
+    <Reference Include="Hallmanac.ServiceLocator.Core, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hallmanac.ServiceLocator.Core.1.2.1\lib\Hallmanac.ServiceLocator.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
