--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity.NuGet/Hallmanac.ServiceLocator.Unity.NuGet.csproj
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity.NuGet/Hallmanac.ServiceLocator.Unity.NuGet.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="lib\Hallmanac.ServiceLocator.Unity.dll" />
+    <Content Include="lib\Hallmanac.ServiceLocator.Unity.XML" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
