--- a/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity.NuGet/Package.nuspec
+++ b/src/Hallmanac.ServiceLocator/Hallmanac.ServiceLocator.Unity.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Hallmanac.ServiceLocator.Unity</id>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <title>Hallmanac.ServiceLocator.Unity</title>
     <authors>Brian Hall</authors>
     <owners>Hallmanac</owners>
@@ -10,7 +10,7 @@
       Unity implementation of the IServiceLocator interface for the Hallmanac.ServiceLocator.Core library
     </description>
     <releaseNotes>
-      Implemented additional method for allowing to auto register interfaces and types based on convention.
+      Releasing 1.2.0 again to make sure the correct DLL file got copied into the NuGet package.
     </releaseNotes>
     <summary>
     </summary>
@@ -22,7 +22,7 @@
     <copyright>Copyright  2016</copyright>
     <dependencies>
       <dependency id="CommonServiceLocator" version="1.3" />
-      <dependency id="Hallmanac.ServiceLocator.Core" version="1.0.0" />
+      <dependency id="Hallmanac.ServiceLocator.Core" version="1.2.1" />
       <dependency id="Unity" version="4.0.1" />
     </dependencies>
     <references></references>
